fix(icon): vertically align icon to center

--- a/src/components/layout/TopIconButton.less
+++ b/src/components/layout/TopIconButton.less
@@ -17,4 +17,6 @@
   width: 14px;
   height: 14px;
   background-color: var(--g3-color__white);
+  position: relative;
+  top: 2px;
 }
